# reuse-license-utils

./: .gitignore  LICENSE  README.md  REUSE.toml  pyproject.toml
.github/workflows/: verify_licenses.yml
LICENSES/: MIT.txt
docs/: cli.md  conf.py  configuration.md  getting-started.md  index.md
docs/api/: index.md
reuse_license_utils/: __init__.py  add_header.py  config.py  files.py  generate_toml.py  headers.py  identify_files.py  licenses.py  toml.py  utils.py  verify.py
reuse_license_utils/commands/: __init__.py  command_base.py  download_licenses.py  generate_reuse.py  headers.py  main.py  print_expected.py  verify.py
